[gd_scene load_steps=19 format=3 uid="uid://bjaetrpc72q54"]

[ext_resource type="Script" path="res://scripts/Handheld.gd" id="1_ieulp"]
[ext_resource type="AudioStream" uid="uid://d2rpby3h8wuss" path="res://sounds/sine/dot.wav" id="2_vbyxg"]
[ext_resource type="AudioStream" uid="uid://bry41pwl7y4j2" path="res://sounds/sine/dash.wav" id="3_mvbyn"]
[ext_resource type="FontFile" uid="uid://cgg0g7auyxkx4" path="res://media/VCR_OSD_MONO_1.001.ttf" id="4_ll6v4"]
[ext_resource type="PackedScene" uid="uid://tx00gav6alvb" path="res://models/handheld.blend" id="5_pfcd2"]
[ext_resource type="Texture2D" uid="uid://bn022ynlbyfn6" path="res://media/depth_meter.png" id="6_1ra1a"]

[sub_resource type="ViewportTexture" id="ViewportTexture_j0fyx"]
viewport_path = NodePath("ScreenUI")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_enmbk"]
resource_local_to_scene = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_j0fyx")

[sub_resource type="PlaneMesh" id="PlaneMesh_ls5k6"]
size = Vector2(0.015, 0.019)

[sub_resource type="ViewportTexture" id="ViewportTexture_qlc44"]
viewport_path = NodePath("DepthUI")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1xpak"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_qlc44")
metallic_specular = 0.0
emission_enabled = true
emission_energy_multiplier = 0.1
emission_texture = SubResource("ViewportTexture_qlc44")

[sub_resource type="PlaneMesh" id="PlaneMesh_koj6l"]
size = Vector2(0.005, 0.018)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dxslf"]
albedo_color = Color(0.443137, 0.443137, 0.443137, 1)
metallic_specular = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_fj1mi"]
size = Vector3(0.008, 0.008, 0.006)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jgg8"]
bg_color = Color(0.454902, 0.823529, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxblx"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="Gradient" id="Gradient_aqsj0"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.370238, 0.701248, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5hdfg"]
gradient = SubResource("Gradient_aqsj0")

[node name="HandHeld" type="PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 0.999998, 0, 0, 0, 0.999998, 0, 0, 0)
rotation_mode = 4
script = ExtResource("1_ieulp")

[node name="Offset" type="Node3D" parent="."]
transform = Transform3D(0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, 0, 0.005, 0)

[node name="Screen" type="MeshInstance3D" parent="Offset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0013233, 0.0107004, -0.00078449)
layers = 2
material_override = SubResource("StandardMaterial3D_enmbk")
mesh = SubResource("PlaneMesh_ls5k6")
skeleton = NodePath("../Model")

[node name="SpotLight3D" type="SpotLight3D" parent="Offset/Screen"]
transform = Transform3D(1, 0, 0, 0, -4.37115e-08, -1, 0, 1, -4.37115e-08, 0, 0, 0)
layers = 2
light_color = Color(0.294118, 1, 1, 1)
light_energy = 10.0
light_volumetric_fog_energy = 7.0
light_cull_mask = 4294967294
spot_range = 0.05
spot_angle = 90.0

[node name="OmniLight3D" type="OmniLight3D" parent="Offset/Screen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00547092, 0)
layers = 2
light_color = Color(0, 1, 1, 1)
light_energy = 0.1
light_volumetric_fog_energy = 2.0
light_cull_mask = 4294967294
omni_range = 0.05
omni_attenuation = 0.535887

[node name="Depth" type="MeshInstance3D" parent="Offset"]
transform = Transform3D(1, 0, 0, 1.49012e-08, 1, 0, 0, 0, 1, 0.00573966, 0.0113414, 0.0178414)
layers = 2
material_override = SubResource("StandardMaterial3D_1xpak")
mesh = SubResource("PlaneMesh_koj6l")
skeleton = NodePath("../Model")

[node name="Model" parent="Offset" instance=ExtResource("5_pfcd2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0013233, 0.00491646, -7.70763e-05)

[node name="Up" type="StaticBody3D" parent="Offset" groups=["up"]]
transform = Transform3D(1, 0, 0, 1.49012e-08, 1, 0, 0, 0, 1, -0.0021927, 0.0123517, 0.0140176)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Offset/Up"]
layers = 2
radius = 0.003
height = 0.001
sides = 10
material = SubResource("StandardMaterial3D_dxslf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Offset/Up"]
shape = SubResource("BoxShape3D_fj1mi")

[node name="Down" type="StaticBody3D" parent="Offset" groups=["down"]]
transform = Transform3D(1, 0, 0, 1.49012e-08, 1, 0, 0, 0, 1, -0.0021927, 0.0123517, 0.0229166)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Offset/Down"]
layers = 2
radius = 0.003
height = 0.001
sides = 10
material = SubResource("StandardMaterial3D_dxslf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Offset/Down"]
shape = SubResource("BoxShape3D_fj1mi")

[node name="Dot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_vbyxg")
volume_db = -25.0
max_db = 0.1
pitch_scale = 1.7
max_distance = 0.5
max_polyphony = 3
panning_strength = 2.0

[node name="Dash" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_mvbyn")
volume_db = -25.0
max_db = 0.1
pitch_scale = 1.9
max_distance = 0.5
max_polyphony = 3
panning_strength = 2.0

[node name="MorseTick" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="WordEnd" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ScreenUI" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(384, 512)
render_target_update_mode = 4

[node name="Control" type="Control" parent="ScreenUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ScreenUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8jgg8")

[node name="RichTextLabel" type="RichTextLabel" parent="ScreenUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -14.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/normal_font = ExtResource("4_ll6v4")
theme_override_font_sizes/normal_font_size = 55
scroll_active = false
autowrap_mode = 1

[node name="DepthUI" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(128, 512)
render_target_update_mode = 4

[node name="Control" type="Control" parent="DepthUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DepthUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jxblx")

[node name="RichTextLabel" type="RichTextLabel" parent="DepthUI/Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -52.0
offset_right = 61.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_ll6v4")
theme_override_font_sizes/normal_font_size = 65
text = "O30"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Bars" type="TextureRect" parent="DepthUI/Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 440.0
grow_horizontal = 2
scale = Vector2(0.3, 1)
pivot_offset = Vector2(0, 220)
texture = ExtResource("6_1ra1a")

[node name="Depth" type="TextureRect" parent="DepthUI/Control/Panel"]
layout_mode = 0
offset_top = 400.0
offset_right = 256.0
offset_bottom = 410.0
texture = SubResource("GradientTexture1D_5hdfg")

[connection signal="timeout" from="MorseTick" to="." method="morse_tick"]
